<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".NewCharacterActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/name"
                android:textColor="@color/purple_700"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="24sp"
                tools:text="Madrigal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/race"
                android:textColor="@color/purple_500"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/raceTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="24sp"
                tools:text="Elf" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/stats"
                android:textColor="@color/purple_500"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:paddingTop="8dp"
                    android:text="@string/wisdom"
                    android:textColor="@color/purple_500"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/wisdomTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:textSize="24sp"
                    tools:text="16" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:paddingTop="8dp"
                    android:text="@string/strength"
                    android:textColor="@color/purple_500"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/strengthTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:textSize="24sp"
                    tools:text="16" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:paddingTop="8dp"
                    android:text="@string/dexterity"
                    android:textColor="@color/purple_500"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/dexterityTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="24sp"
                    tools:text="16" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/generateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generate" />

        <Button
            android:id="@+id/quitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quit"
            android:textAllCaps="true"
            android:textColor="@color/teal_200"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            android:typeface="monospace" />
    </LinearLayout>
</ScrollView>